Fix issue with the exclamation icon not showing on 404 page header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ h1 {
 
 .nav-error i {
     color: rgb(245, 19, 60);
+    font-size: 2.3rem;
 }
 
 .rules-explain {
